syntax = "proto3";
package identities.transactions.issue;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string to = 2;
  string from_i_d = 3;
  string classification_i_d = 4;
  string immutable_meta_properties = 5;
  string immutable_properties = 6;
  string mutable_meta_properties = 7;
  string mutable_properties = 8;
}