syntax = "proto3";

package modules.identities.internal.queries.identity;

import "gogoproto/gogo.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/identities/internal/queries/identity";

message QueryRequest {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  string identity_i_d = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required AssetID missing\""];
}

message QueryResponse {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;
  option (gogoproto.sizer) = false;
  option (gogoproto.marshaler) = false;
  option (gogoproto.unmarshaler) = false;

  bool success =1;
  string error = 2 ;
  repeated string list = 3 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/helpers.Mappable", (gogoproto.nullable) = false] ;

}
